--- a/src/components/home/sections/boardmembers.scss
+++ b/src/components/home/sections/boardmembers.scss
@@ -32,7 +32,7 @@
     } 
     div{
         border: 1px solid #000;
-        padding: 0 5px; 
+       // padding: 0 5px; 
        
     }
 } 
