--- a/src/components/home/sections/volunteer.scss
+++ b/src/components/home/sections/volunteer.scss
@@ -17,7 +17,9 @@ $dark-purple: #412F8A;
     flex-direction: column;
     margin: 5%; 
     padding-left: 5em;
-
+    @media only screen and (min-width: 320px){
+      padding: 0;
+    }
     @media only screen and (min-width: 1024px) {
       width: 50%;
       margin: 0 5% 0 5%;
